--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,10 +18,14 @@
 }
 
 .content {
-	width: 700px;
+	width: 900px;
 	margin: 100px auto;
 	text-align: center;
 	font-family: 'Droid', serif;
+}
+
+.content-narrow {
+  width: 80%;
 }
 
 .links {
@@ -43,12 +47,22 @@ ul {
 }
 
 .emphasis {
+
 	font-family: "Droid-italic";
+  border: 1px solid;
+  margin: 40px auto;
+  width: 90%;
+  padding: 10px;
 }
 
 h1 {
 	font-family: 'Oswald', sans-serif;
 	font-size: 75px;
+}
+
+h2 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 45px;
 }
 
 h4 {
